Adds new plugin Invoke-IcingaCheckHTTPStatus

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -287,7 +287,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
 
     arguments += {
         "-WarningPl" = {
-            description = "Threshold on which the plugin will return 'WARNING' for possible packet loss in %"
+            description = "Threshold on which the plugin will return 'WARNING' for the response time in ms"
             value = "$IcingaCheckICMP_Object_WarningPl$"
             order = 4
         }
@@ -334,7 +334,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-CriticalPl" = {
-            description = "Threshold on which the plugin will return 'CRITICAL' for possible packet loss in %"
+            description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
             value = "$IcingaCheckICMP_Object_CriticalPl$"
             order = 5
         }
@@ -478,6 +478,58 @@ object CheckCommand "Invoke-IcingaCheckUptime" {
         }
     }
     vars.IcingaCheckUptime_Switchparameter_NoPerfData = false
+}
+
+object CheckCommand "Invoke-IcingaCheckUsers" {
+    import "PowerShell Base"
+
+    arguments += {
+        "-C" = {
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUsers' "
+            order = 0
+        }
+        "-Verbosity" = {
+            value = "$IcingaCheckUsers_Int32_Verbosity$"
+            order = 5
+        }
+        "-Warning" = {
+            description = "Used to specify a Warning threshold. In this case an integer value."
+            value = "$IcingaCheckUsers_Object_Warning$"
+            order = 3
+        }
+        "-Critical" = {
+            description = "Used to specify a Critical threshold. In this case an integer value."
+            value = "$IcingaCheckUsers_Object_Critical$"
+            order = 4
+        }
+        "-NoPerfData" = {
+            set_if = "$IcingaCheckUsers_Switchparameter_NoPerfData$"
+            order = 99
+        }
+        "-Username" = {
+            description = "Used to specify an array of usernames to match against.  e.g 'Administrator', 'Icinga'"
+            value = {{
+                var arr = macro("$IcingaCheckUsers_Array_Username$");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
+            }}
+            order = 2
+        }
+    }
+    vars.IcingaCheckUsers_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckUpdates" {
@@ -752,7 +804,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 8
         }
         "-CriticalTotal" = {
-            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A critical threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_CriticalTotal$"
             order = 7
         }
@@ -831,36 +883,13 @@ object CheckCommand "Invoke-IcingaCheckProcessCount" {
     vars.IcingaCheckProcessCount_Switchparameter_NoPerfData = false
 }
 
-object CheckCommand "Invoke-IcingaCheckUsers" {
+object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
     import "PowerShell Base"
 
     arguments += {
-        "-C" = {
-            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUsers' "
-            order = 0
-        }
-        "-Verbosity" = {
-            value = "$IcingaCheckUsers_Int32_Verbosity$"
-            order = 5
-        }
-        "-Warning" = {
-            description = "Used to specify a Warning threshold. In this case an integer value."
-            value = "$IcingaCheckUsers_Object_Warning$"
-            order = 3
-        }
-        "-Critical" = {
-            description = "Used to specify a Critical threshold. In this case an integer value."
-            value = "$IcingaCheckUsers_Object_Critical$"
-            order = 4
-        }
-        "-NoPerfData" = {
-            set_if = "$IcingaCheckUsers_Switchparameter_NoPerfData$"
-            order = 99
-        }
-        "-Username" = {
-            description = "Used to specify an array of usernames to match against.  e.g 'Administrator', 'Icinga'"
+        "-StatusCode" = {
             value = {{
-                var arr = macro("$IcingaCheckUsers_Array_Username$");
+                var arr = macro("$IcingaCheckHTTPStatus_Array_StatusCode$");
                     if (len(arr) == 0) {
                         return "@()";
                     }
@@ -877,10 +906,143 @@ object CheckCommand "Invoke-IcingaCheckUsers" {
                         }
                     ).join(",");
             }}
+            order = 14
+        }
+        "-NoPerfData" = {
+            set_if = "$IcingaCheckHTTPStatus_Switchparameter_NoPerfData$"
+            order = 99
+        }
+        "-Verbosity" = {
+            description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state"
+            value = "$IcingaCheckHTTPStatus_Int32_Verbosity$"
+            order = 16
+        }
+        "-Content" = {
+            description = "Used to specify an array of regex-match-strings to match against the content of the webrequest response."
+            value = {{
+                var arr = macro("$IcingaCheckHTTPStatus_Array_Content$");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
+            }}
+            order = 13
+        }
+        "-ProxyUsername" = {
+            description = "Used to specify a proxy username as string to authenticate with. Use with: -ProxyPassword & -ProxyServer"
+            value = "$IcingaCheckHTTPStatus_String_ProxyUsername$"
+            order = 10
+        }
+        "-Username" = {
+            description = "Used to specify a username as string to authenticate with. Authentication is only possible with 'https://'. Use with: -Password"
+            value = "$IcingaCheckHTTPStatus_String_Username$"
+            order = 8
+        }
+        "-C" = {
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckHTTPStatus' "
+            order = 0
+        }
+        "-Negate" = {
+            set_if = "$IcingaCheckHTTPStatus_Switchparameter_Negate$"
+            order = 99
+        }
+        "-Password" = {
+            description = "Used to specify a password as securestring to authenticate with. Authentication is only possible with 'https://'.Use with: -Username"
+            value = "(ConvertTo-IcingaSecureString '$IcingaCheckHTTPStatus_Securestring_Password$')"
+            order = 9
+        }
+        "-Warning" = {
+            description = "Used to specify the webrequest response time warning threshold in seconds, everything past that threshold is considered a WARNING."
+            value = "$IcingaCheckHTTPStatus_Object_Warning$"
             order = 2
         }
+        "-ProxyServer" = {
+            description = "Used to specify a proxy server as string to authenticate with."
+            value = "$IcingaCheckHTTPStatus_String_ProxyServer$"
+            order = 12
+        }
+        "-ProxyPassword" = {
+            description = "Used to specify a proxy password as securestring to authenticate with. Use with: -ProxyUsername & -ProxyServer"
+            value = "(ConvertTo-IcingaSecureString '$IcingaCheckHTTPStatus_Securestring_ProxyPassword$')"
+            order = 11
+        }
+        "-Minimum" = {
+            value = "$IcingaCheckHTTPStatus_Int32_Minimum$"
+            order = 15
+        }
+        "-VHost" = {
+            description = "Used to specify a VHost as string."
+            value = "$IcingaCheckHTTPStatus_String_VHost$"
+            order = 5
+        }
+        "-Critical" = {
+            description = "Used to specify the webrequest response time critical threshold in seconds, everything past that threshold is considered a CRITICAL."
+            value = "$IcingaCheckHTTPStatus_Object_Critical$"
+            order = 3
+        }
+        "-Headers" = {
+            description = "Used to specify headers as Array. Like: -Headers 'Accept:application/json'"
+            value = {{
+                var arr = macro("$IcingaCheckHTTPStatus_Array_Headers$");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
+            }}
+            order = 6
+        }
+        "-Timeout" = {
+            description = "Used to specify the timeout in seconds of the webrequest as integer. The default is 10 for 10 seconds."
+            value = "$IcingaCheckHTTPStatus_Int32_Timeout$"
+            order = 7
+        }
+        "-Url" = {
+            description = "Used to specify the URL of the host to check http as string. Use 'http://' or 'https://' to actively chose a protocol. Likewise ':80' or any other port number to specify a port, etc."
+            value = {{
+                var arr = macro("$IcingaCheckHTTPStatus_Array_Url$");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
+            }}
+            order = 4
+        }
     }
-    vars.IcingaCheckUsers_Switchparameter_NoPerfData = false
+    vars.IcingaCheckHTTPStatus_Switchparameter_NoPerfData = false
+    vars.IcingaCheckHTTPStatus_Switchparameter_Negate = false
 }
 
 object CheckCommand "Invoke-IcingaCheckDiskHealth" {
