Invoke-IcingaCheckDirectory doesn't work without filename parameter Fixes #154

--- a/config/icinga/Invoke-IcingaCheckDirectory.conf
+++ b/config/icinga/Invoke-IcingaCheckDirectory.conf
@@ -55,7 +55,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 6
         }
         "-FileNames" = {
-            description = "Used to specify an array of filenames or expressions to match against results to filter for specific files.  e.g '*.txt', '*.sql' # Fiends all files ending with .txt and .sql"
+            description = "Used to specify an array of filenames or expressions to match against results to filter for specific files.  e.g '*.txt', '*.sql', finds all files ending with .txt and .sql"
             value = {{
                 var arr = macro("$IcingaCheckDirectory_Array_FileNames$");
                     if (len(arr) == 0) {
