Invoke-IcingaCheckCertificate: 'no certificates'-result is returned as Unknown-state Fixes #156

--- a/config/icinga/Invoke-IcingaCheckCertificate.conf
+++ b/config/icinga/Invoke-IcingaCheckCertificate.conf
@@ -39,6 +39,10 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             }}
             order = 7
         }
+        "-IgnoreEmpty" = {
+            set_if = "$IcingaCheckCertificate_Switchparameter_IgnoreEmpty$"
+            order = 99
+        }
         "-WarningEnd" = {
             description = "Used to specify a Warning range for the end date of an certificate. In this case a string. Allowed units include: ms, s, m, h, d, w, M, y"
             value = "$IcingaCheckCertificate_Object_WarningEnd$"
@@ -135,4 +139,5 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
     }
     vars.IcingaCheckCertificate_Switchparameter_Recurse = false
     vars.IcingaCheckCertificate_Switchparameter_Trusted = false
+    vars.IcingaCheckCertificate_Switchparameter_IgnoreEmpty = false
 }
