--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -179,6 +179,10 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             }}
             order = 7
         }
+        "-IgnoreEmpty" = {
+            set_if = "$IcingaCheckCertificate_Switchparameter_IgnoreEmpty$"
+            order = 99
+        }
         "-WarningEnd" = {
             description = "Used to specify a Warning range for the end date of an certificate. In this case a string. Allowed units include: ms, s, m, h, d, w, M, y"
             value = "$IcingaCheckCertificate_Object_WarningEnd$"
@@ -275,6 +279,7 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
     }
     vars.IcingaCheckCertificate_Switchparameter_Recurse = false
     vars.IcingaCheckCertificate_Switchparameter_Trusted = false
+    vars.IcingaCheckCertificate_Switchparameter_IgnoreEmpty = false
 }
 
 object CheckCommand "Invoke-IcingaCheckICMP" {
@@ -282,7 +287,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
 
     arguments += {
         "-WarningPl" = {
-            description = "Threshold on which the plugin will return 'WARNING' for possible packet loss in %"
+            description = "Threshold on which the plugin will return 'WARNING' for the response time in ms"
             value = "$IcingaCheckICMP_Object_WarningPl$"
             order = 4
         }
@@ -329,7 +334,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-CriticalPl" = {
-            description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
+            description = "Threshold on which the plugin will return 'CRITICAL' for possible packet loss in %"
             value = "$IcingaCheckICMP_Object_CriticalPl$"
             order = 5
         }
@@ -747,7 +752,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 8
         }
         "-CriticalTotal" = {
-            description = "A critical threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_CriticalTotal$"
             order = 7
         }
