Replaces Get-EventLog with Get-WinEvent

--- a/config/icinga/Invoke-IcingaCheckEventlog.conf
+++ b/config/icinga/Invoke-IcingaCheckEventlog.conf
@@ -136,7 +136,7 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             order = 8
         }
         "-ExcludeEntryType" = {
-            description = "Used to specify an array of entry types within the eventlog to be excluded."
+            description = "Used to specify an array of entry types within the eventlog to be excluded. Please note that `SuccessAudit` and `FailureAudit` only apply to the `Security` EventLog."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_ExcludeEntryType$");
                     if (len(arr) == 0) {
@@ -158,7 +158,7 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             order = 10
         }
         "-IncludeEntryType" = {
-            description = "Used to specify an array of entry types within the eventlog to be included."
+            description = "Used to specify an array of entry types within the eventlog to be included. Please note that `SuccessAudit` and `FailureAudit` only apply to the `Security` EventLog."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_IncludeEntryType$");
                     if (len(arr) == 0) {
@@ -179,9 +179,14 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             }}
             order = 9
         }
+        "-MaxEntries" = {
+            description = "Allows to limit the amount of log entries fetched by Get-WinEvent, to increase performance and reduce system load impact Should match the average amount of log files written for the intended time range filtered"
+            value = "$IcingaCheckEventlog_Int32_MaxEntries$"
+            order = 17
+        }
         "-Verbosity" = {
             value = "$IcingaCheckEventlog_Int32_Verbosity$"
-            order = 17
+            order = 18
         }
         "-ExcludeEventId" = {
             description = "Used to specify an array of events identified by their id to be excluded."
