Updates plugin config to v1.5.0

--- a/config/icinga/Invoke-IcingaCheckCertificate.conf
+++ b/config/icinga/Invoke-IcingaCheckCertificate.conf
@@ -48,14 +48,19 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             value = "$IcingaCheckCertificate_Object_WarningEnd$"
             order = 3
         }
+        "-C" = {
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckCertificate' "
+            order = 0
+        }
         "-CriticalStart" = {
             description = "Used to specify a date. The start date of the certificate has to be past the date specified, otherwise the check results in critical. Use carefully. Use format like: 'yyyy-MM-dd'"
             value = "$IcingaCheckCertificate_Object_CriticalStart$"
             order = 2
         }
-        "-C" = {
-            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckCertificate' "
-            order = 0
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckCertificate_String_ThresholdValue$"
+            order = 100
         }
         "-CertStore" = {
             description = "Used to specify which CertStore to check. Valid choices are '*', 'LocalMachine', 'CurrentUser'"
