--- a/config/icinga/Invoke-IcingaCheckCheckSum.conf
+++ b/config/icinga/Invoke-IcingaCheckCheckSum.conf
@@ -19,6 +19,11 @@ object CheckCommand "Invoke-IcingaCheckCheckSum" {
             value = "$IcingaCheckCheckSum_String_Algorithm$"
             order = 3
         }
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckCheckSum_String_ThresholdValue$"
+            order = 100
+        }
         "-Hash" = {
             value = "$IcingaCheckCheckSum_String_Hash$"
             order = 4
