--- a/config/icinga/Invoke-IcingaCheckDirectory.conf
+++ b/config/icinga/Invoke-IcingaCheckDirectory.conf
@@ -25,6 +25,11 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             set_if = "$IcingaCheckDirectory_Switchparameter_NoPerfData$"
             order = 99
         }
+        "-ChangeOlderThan" = {
+            description = "String that expects input format like '20d', which translates to 20 days. Allowed units: ms, s, m, h, d, w, M, y.  Thereby all files which have a change date older then 20 days are considered within the check."
+            value = "$IcingaCheckDirectory_String_ChangeOlderThan$"
+            order = 8
+        }
         "-ChangeYoungerThan" = {
             description = "String that expects input format like '20d', which translates to 20 days. Allowed units: ms, s, m, h, d, w, M, y.  Thereby all files which have a change date younger then 20 days are considered within the check."
             value = "$IcingaCheckDirectory_String_ChangeYoungerThan$"
@@ -39,10 +44,10 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckDirectory' "
             order = 0
         }
-        "-ChangeOlderThan" = {
-            description = "String that expects input format like '20d', which translates to 20 days. Allowed units: ms, s, m, h, d, w, M, y.  Thereby all files which have a change date older then 20 days are considered within the check."
-            value = "$IcingaCheckDirectory_String_ChangeOlderThan$"
-            order = 8
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckDirectory_String_ThresholdValue$"
+            order = 100
         }
         "-CreationTimeEqual" = {
             description = "String that expects input format like '20d', which translates to 20 days. Allowed units: ms, s, m, h, d, w, M, y.  Thereby all files which have been created 20 days ago are considered within the check."
