--- a/config/icinga/Invoke-IcingaCheckDiskHealth.conf
+++ b/config/icinga/Invoke-IcingaCheckDiskHealth.conf
@@ -42,9 +42,15 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             }}
             order = 3
         }
-        "-IgnoreReadOnlyDisks" = {
-            set_if = "$IcingaCheckDiskHealth_Switchparameter_IgnoreReadOnlyDisks$"
-            order = 99
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckDiskHealth_String_ThresholdValue$"
+            order = 100
+        }
+        "-DiskQueueAvgLenWarning" = {
+            description = "Warning threshold for Avg. Disk Queue Length is the average number of both read and write requests that were queued for the selected disk during the sample interval."
+            value = "$IcingaCheckDiskHealth_Object_DiskQueueAvgLenWarning$"
+            order = 12
         }
         "-IncludeDisk" = {
             description = "Specify the index id of disks you want to include for checks. Example 0, 1"
@@ -110,10 +116,9 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             value = "$IcingaCheckDiskHealth_Object_DiskWriteSecCritical$"
             order = 9
         }
-        "-DiskQueueAvgLenWarning" = {
-            description = "Warning threshold for Avg. Disk Queue Length is the average number of both read and write requests that were queued for the selected disk during the sample interval."
-            value = "$IcingaCheckDiskHealth_Object_DiskQueueAvgLenWarning$"
-            order = 12
+        "-IgnoreReadOnlyDisks" = {
+            set_if = "$IcingaCheckDiskHealth_Switchparameter_IgnoreReadOnlyDisks$"
+            order = 99
         }
         "-DiskAvgReadSecWarning" = {
             description = "Warning threshold for avg. Disk sec/Read is the average time, in seconds, of a read of data from the disk. If the threshold values are not in seconds, please enter a unit such as (ms, s, m, h, ...)"
