--- a/config/icinga/Invoke-IcingaCheckICMP.conf
+++ b/config/icinga/Invoke-IcingaCheckICMP.conf
@@ -2,6 +2,24 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
     import "PowerShell Base"
 
     arguments += {
+        "-Verbosity" = {
+            description = "Increase the printed output message by adding additional details or print all data regardless of their status"
+            value = "$IcingaCheckICMP_Int32_Verbosity$"
+            order = 9
+        }
+        "-IPv4" = {
+            set_if = "$IcingaCheckICMP_Switchparameter_IPv4$"
+            order = 99
+        }
+        "-NoPerfData" = {
+            set_if = "$IcingaCheckICMP_Switchparameter_NoPerfData$"
+            order = 99
+        }
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckICMP_String_ThresholdValue$"
+            order = 100
+        }
         "-WarningPl" = {
             description = "Threshold on which the plugin will return 'WARNING' for the response time in ms"
             value = "$IcingaCheckICMP_Object_WarningPl$"
@@ -12,15 +30,24 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             value = "$IcingaCheckICMP_String_Hostname$"
             order = 6
         }
+        "-C" = {
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckICMP' "
+            order = 0
+        }
         "-Warning" = {
             description = "Threshold on which the plugin will return 'WARNING' for the response time in ms"
             value = "$IcingaCheckICMP_Object_Warning$"
             order = 2
         }
-        "-Verbosity" = {
-            description = "Increase the printed output message by adding additional details or print all data regardless of their status"
-            value = "$IcingaCheckICMP_Int32_Verbosity$"
-            order = 9
+        "-Critical" = {
+            description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
+            value = "$IcingaCheckICMP_Object_Critical$"
+            order = 3
+        }
+        "-PacketSize" = {
+            description = "The size of each packet send to the target host"
+            value = "$IcingaCheckICMP_Int32_PacketSize$"
+            order = 8
         }
         "-PacketCount" = {
             description = "The amount of packets send to the target host"
@@ -31,32 +58,10 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             set_if = "$IcingaCheckICMP_Switchparameter_IPv6$"
             order = 99
         }
-        "-PacketSize" = {
-            description = "The size of each packet send to the target host"
-            value = "$IcingaCheckICMP_Int32_PacketSize$"
-            order = 8
-        }
-        "-NoPerfData" = {
-            set_if = "$IcingaCheckICMP_Switchparameter_NoPerfData$"
-            order = 99
-        }
-        "-Critical" = {
-            description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
-            value = "$IcingaCheckICMP_Object_Critical$"
-            order = 3
-        }
-        "-IPv4" = {
-            set_if = "$IcingaCheckICMP_Switchparameter_IPv4$"
-            order = 99
-        }
         "-CriticalPl" = {
             description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
             value = "$IcingaCheckICMP_Object_CriticalPl$"
             order = 5
-        }
-        "-C" = {
-            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckICMP' "
-            order = 0
         }
     }
     vars.IcingaCheckICMP_Switchparameter_NoPerfData = false
