--- a/config/icinga/Invoke-IcingaCheckNetworkInterface.conf
+++ b/config/icinga/Invoke-IcingaCheckNetworkInterface.conf
@@ -30,6 +30,11 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             value = "$IcingaCheckNetworkInterface_Object_PackteOutboundErrorCrit$"
             order = 13
         }
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckNetworkInterface_String_ThresholdValue$"
+            order = 100
+        }
         "-IncomingAvgBandUsageCrit" = {
             description = "Critical threshold for network Interface avg. Bytes Received/sec is the average of incoming Bytes."
             value = "$IcingaCheckNetworkInterface_Object_IncomingAvgBandUsageCrit$"
