--- a/config/icinga/Invoke-IcingaCheckTimeSync.conf
+++ b/config/icinga/Invoke-IcingaCheckTimeSync.conf
@@ -6,24 +6,29 @@ object CheckCommand "Invoke-IcingaCheckTimeSync" {
             value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckTimeSync' "
             order = 0
         }
-        "-Verbosity" = {
-            value = "$IcingaCheckTimeSync_Int32_Verbosity$"
-            order = 8
+        "-Port" = {
+            description = "Port number (default: 123)"
+            value = "$IcingaCheckTimeSync_Int32_Port$"
+            order = 7
         }
         "-Warning" = {
             description = "Used to specify a offset Warning threshold e.g 10ms or 0.01s"
             value = "$IcingaCheckTimeSync_Object_Warning$"
             order = 4
         }
+        "-Verbosity" = {
+            value = "$IcingaCheckTimeSync_Int32_Verbosity$"
+            order = 8
+        }
         "-Timeout" = {
             description = "Seconds before connection times out (default: 10)"
             value = "$IcingaCheckTimeSync_Int32_Timeout$"
             order = 6
         }
-        "-Port" = {
-            description = "Port number (default: 123)"
-            value = "$IcingaCheckTimeSync_Int32_Port$"
-            order = 7
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckTimeSync_String_ThresholdValue$"
+            order = 100
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckTimeSync_Switchparameter_NoPerfData$"
