--- a/config/icinga/Invoke-IcingaCheckFirewall.conf
+++ b/config/icinga/Invoke-IcingaCheckFirewall.conf
@@ -2,13 +2,13 @@ object CheckCommand "Invoke-IcingaCheckFirewall" {
     import "PowerShell Base"
 
     arguments += {
-        "-Verbosity" = {
-            value = "$IcingaCheckFirewall_Int32_Verbosity$"
-            order = 3
-        }
         "-C" = {
             value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckFirewall' "
             order = 0
+        }
+        "-Verbosity" = {
+            value = "$IcingaCheckFirewall_Int32_Verbosity$"
+            order = 3
         }
         "-Profile" = {
             description = "Used to specify an array of profiles to check. Available profiles are 'Domain', 'Public', 'Private'"
@@ -31,6 +31,11 @@ object CheckCommand "Invoke-IcingaCheckFirewall" {
                     ).join(",");
             }}
             order = 2
+        }
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckFirewall_String_ThresholdValue$"
+            order = 100
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckFirewall_Switchparameter_NoPerfData$"
