--- a/config/icinga/Invoke-IcingaCheckMemory.conf
+++ b/config/icinga/Invoke-IcingaCheckMemory.conf
@@ -15,15 +15,20 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
             value = "$IcingaCheckMemory_String_Warning$"
             order = 3
         }
-        "-CriticalPercent" = {
-            description = "Used to specify a Critical threshold for the memory usage in percent, like 30 for 30%. This is using the default Icinga threshold handling."
-            value = "$IcingaCheckMemory_Object_CriticalPercent$"
-            order = 4
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckMemory_String_ThresholdValue$"
+            order = 100
         }
         "-Critical" = {
             description = "Used to specify a Critical threshold. In this case an string value. The string has to be like, '20B', '20KB', '20MB', '20GB', '20TB', '20PB' This is using the default Icinga threshold handling."
             value = "$IcingaCheckMemory_String_Critical$"
             order = 2
+        }
+        "-CriticalPercent" = {
+            description = "Used to specify a Critical threshold for the memory usage in percent, like 30 for 30%. This is using the default Icinga threshold handling."
+            value = "$IcingaCheckMemory_Object_CriticalPercent$"
+            order = 4
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckMemory_Switchparameter_NoPerfData$"
