--- a/config/icinga/Invoke-IcingaCheckProcessCount.conf
+++ b/config/icinga/Invoke-IcingaCheckProcessCount.conf
@@ -15,6 +15,11 @@ object CheckCommand "Invoke-IcingaCheckProcessCount" {
             value = "$IcingaCheckProcessCount_Object_Warning$"
             order = 2
         }
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckProcessCount_String_ThresholdValue$"
+            order = 100
+        }
         "-Process" = {
             description = "Used to specify an array of processes to count and match against. e.g. conhost,wininit"
             value = {{
