--- a/config/icinga/Invoke-IcingaCheckScheduledTask.conf
+++ b/config/icinga/Invoke-IcingaCheckScheduledTask.conf
@@ -2,6 +2,10 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
     import "PowerShell Base"
 
     arguments += {
+        "-C" = {
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckScheduledTask' "
+            order = 0
+        }
         "-TaskName" = {
             description = "A list of tasks to check for. If your tasks contain spaces, wrap them around a ' to ensure they are properly handled as string"
             value = {{
@@ -24,9 +28,15 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             }}
             order = 2
         }
-        "-C" = {
-            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckScheduledTask' "
-            order = 0
+        "-Verbosity" = {
+            description = "Increase the printed output message by adding additional details or print all data regardless of their status"
+            value = "$IcingaCheckScheduledTask_Int32_Verbosity$"
+            order = 4
+        }
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckScheduledTask_String_ThresholdValue$"
+            order = 100
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckScheduledTask_Switchparameter_NoPerfData$"
@@ -53,11 +63,6 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
                     ).join(",");
             }}
             order = 3
-        }
-        "-Verbosity" = {
-            description = "Increase the printed output message by adding additional details or print all data regardless of their status"
-            value = "$IcingaCheckScheduledTask_Int32_Verbosity$"
-            order = 4
         }
     }
     vars.IcingaCheckScheduledTask_Switchparameter_NoPerfData = false
