--- a/config/icinga/Invoke-IcingaCheckService.conf
+++ b/config/icinga/Invoke-IcingaCheckService.conf
@@ -2,10 +2,19 @@ object CheckCommand "Invoke-IcingaCheckService" {
     import "PowerShell Base"
 
     arguments += {
+        "-C" = {
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckService' "
+            order = 0
+        }
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state"
             value = "$IcingaCheckService_Int32_Verbosity$"
             order = 5
+        }
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckService_String_ThresholdValue$"
+            order = 100
         }
         "-Status" = {
             description = "Status for the specified service or services to check against."
@@ -59,10 +68,6 @@ object CheckCommand "Invoke-IcingaCheckService" {
                     ).join(",");
             }}
             order = 3
-        }
-        "-C" = {
-            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckService' "
-            order = 0
         }
     }
     vars.IcingaCheckService_Switchparameter_NoPerfData = false
