--- a/config/icinga/Invoke-IcingaCheckStoragePool.conf
+++ b/config/icinga/Invoke-IcingaCheckStoragePool.conf
@@ -7,10 +7,10 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
             value = "$IcingaCheckStoragePool_Object_RetireMissingPhysicalDisksCritical$"
             order = 17
         }
-        "-IsReadOnlyCritical" = {
-            description = "Used to specify a Critical threshold for the StoragePool IsReadOnly Attr."
-            value = "$IcingaCheckStoragePool_Object_IsReadOnlyCritical$"
-            order = 8
+        "-TotalUsedWarning" = {
+            description = "Used to specify TotalUsed Warning threshold in GB."
+            value = "$IcingaCheckStoragePool_Object_TotalUsedWarning$"
+            order = 6
         }
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state"
@@ -39,6 +39,11 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
         "-C" = {
             value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckStoragePool' "
             order = 0
+        }
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckStoragePool_String_ThresholdValue$"
+            order = 100
         }
         "-FreeSpaceCritical" = {
             description = "Used to specify a Critical threshold for the StoragePool FreeSpaces in GB. This value is a decreasing metric which will require you to add a ':' behind the threshold, like '20GB:' to check if free space is lower compared to your threshold"
@@ -128,10 +133,10 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
             value = "$IcingaCheckStoragePool_Object_RetireMissingPhysicalDisksWarning$"
             order = 16
         }
-        "-TotalUsedWarning" = {
-            description = "Used to specify TotalUsed Warning threshold in GB."
-            value = "$IcingaCheckStoragePool_Object_TotalUsedWarning$"
-            order = 6
+        "-IsReadOnlyCritical" = {
+            description = "Used to specify a Critical threshold for the StoragePool IsReadOnly Attr."
+            value = "$IcingaCheckStoragePool_Object_IsReadOnlyCritical$"
+            order = 8
         }
     }
     vars.IcingaCheckStoragePool_Switchparameter_IncludePrimordial = false
