--- a/config/icinga/Invoke-IcingaCheckTCP.conf
+++ b/config/icinga/Invoke-IcingaCheckTCP.conf
@@ -21,6 +21,11 @@ object CheckCommand "Invoke-IcingaCheckTCP" {
             value = "$IcingaCheckTCP_String_Address$"
             order = 2
         }
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckTCP_String_ThresholdValue$"
+            order = 100
+        }
         "-Negate" = {
             set_if = "$IcingaCheckTCP_Switchparameter_Negate$"
             order = 99
