--- a/config/icinga/Invoke-IcingaCheckUpdates.conf
+++ b/config/icinga/Invoke-IcingaCheckUpdates.conf
@@ -2,19 +2,6 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
     import "PowerShell Base"
 
     arguments += {
-        "-C" = {
-            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUpdates' "
-            order = 0
-        }
-        "-Verbosity" = {
-            value = "$IcingaCheckUpdates_Int32_Verbosity$"
-            order = 5
-        }
-        "-Warning" = {
-            description = "Used to specify a Warning threshold. In this case an integer value."
-            value = "$IcingaCheckUpdates_Object_Warning$"
-            order = 3
-        }
         "-UpdateFilter" = {
             value = {{
                 var arr = macro("$IcingaCheckUpdates_Array_UpdateFilter$");
@@ -36,6 +23,20 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             }}
             order = 2
         }
+        "-Verbosity" = {
+            value = "$IcingaCheckUpdates_Int32_Verbosity$"
+            order = 5
+        }
+        "-Warning" = {
+            description = "Used to specify a Warning threshold. In this case an integer value."
+            value = "$IcingaCheckUpdates_Object_Warning$"
+            order = 3
+        }
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckUpdates_String_ThresholdValue$"
+            order = 100
+        }
         "-Critical" = {
             description = "Used to specify a Critical threshold. In this case an integer value."
             value = "$IcingaCheckUpdates_Object_Critical$"
@@ -44,6 +45,10 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
         "-NoPerfData" = {
             set_if = "$IcingaCheckUpdates_Switchparameter_NoPerfData$"
             order = 99
+        }
+        "-C" = {
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUpdates' "
+            order = 0
         }
     }
     vars.IcingaCheckUpdates_Switchparameter_NoPerfData = false
