--- a/config/icinga/Invoke-IcingaCheckUptime.conf
+++ b/config/icinga/Invoke-IcingaCheckUptime.conf
@@ -6,10 +6,19 @@ object CheckCommand "Invoke-IcingaCheckUptime" {
             value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUptime' "
             order = 0
         }
+        "-Verbosity" = {
+            value = "$IcingaCheckUptime_Int32_Verbosity$"
+            order = 4
+        }
         "-Warning" = {
             description = "Used to specify a Warning threshold. In this case a string. Allowed units include: ms, s, m, h, d, w, M, y"
             value = "$IcingaCheckUptime_String_Warning$"
             order = 2
+        }
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckUptime_String_ThresholdValue$"
+            order = 100
         }
         "-Critical" = {
             description = "Used to specify a Critical threshold. In this case a string. Allowed units include: ms, s, m, h, d, w, M, y"
@@ -19,10 +28,6 @@ object CheckCommand "Invoke-IcingaCheckUptime" {
         "-NoPerfData" = {
             set_if = "$IcingaCheckUptime_Switchparameter_NoPerfData$"
             order = 99
-        }
-        "-Verbosity" = {
-            value = "$IcingaCheckUptime_Int32_Verbosity$"
-            order = 4
         }
     }
     vars.IcingaCheckUptime_Switchparameter_NoPerfData = false
