--- a/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
+++ b/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
@@ -20,6 +20,11 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
             set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_IgnoreEmptyChecks$"
             order = 99
         }
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckUsedPartitionSpace_String_ThresholdValue$"
+            order = 100
+        }
         "-Include" = {
             description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:\\','D:\\'"
             value = {{
