--- a/config/icinga/Invoke-IcingaCheckUsers.conf
+++ b/config/icinga/Invoke-IcingaCheckUsers.conf
@@ -15,6 +15,11 @@ object CheckCommand "Invoke-IcingaCheckUsers" {
             value = "$IcingaCheckUsers_Object_Warning$"
             order = 3
         }
+        "-ThresholdValue" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckUsers_String_ThresholdValue$"
+            order = 100
+        }
         "-Critical" = {
             description = "Used to specify a Critical threshold. In this case an integer value."
             value = "$IcingaCheckUsers_Object_Critical$"
